--- a/index.html
+++ b/index.html
@@ -25,193 +25,184 @@
 
         const pitanja = [
             {
-                pitanje: "1. Pravopis – označi pravilnu opciju:",
+                pitanje: "1. Glagol 'trebati' (bezlična upotreba)",
                 opcije: [
-                    "Nisam hteo da ti kažem neznam ništa.",
-                    "Nisam hteo da ti kažem, ne znam ništa.",
-                    "Nisam hteo da ti kažem ne, znam ništa."
+                    "Trebamo da razgovaramo o tom problemu.",
+                    "Treba da razgovaramo o tom problemu.",
+                    "Trebamo razgovarati o tom problemu."
                 ],
                 tacan: 1
             },
             {
-                pitanje: "2. Pravopis – označi pravilnu opciju:",
+                pitanje: "2. Futur II (Budućnost u zavisnoj rečenici)",
                 opcije: [
-                    "S obzirom da je kasno, poći ćemo.",
-                    "S'obzirom da je kasno, poći ćemo.",
-                    "Sobzirom da je kasno, poći ćemo."
-                ],
-                tacan: 0
-            },
-            {
-                pitanje: "3. Pravopis – označi pravilnu opciju:",
-                opcije: [
-                    "Uopšte mi nije jasno šta se dešava.",
-                    "U opšte mi nije jasno šta se dešava.",
-                    "Uopšte mi nije jasno, šta se dešava."
-                ],
-                tacan: 0
-            },
-            {
-                pitanje: "4. Pronađi grešku u rečenici: 'Bio je vrlo zaintresovan za naš projekat.'",
-                opcije: [
-                    "Nema greške",
-                    "Greška: zaintresovan → zainteresovan",
-                    "Greška: vrlo → veoma"
+                    "Javiću ti se kad ću završiti posao.",
+                    "Javiću ti se kad budem završio posao.",
+                    "Javiću ti se kad sam završio posao."
                 ],
                 tacan: 1
             },
             {
-                pitanje: "5. Pronađi grešku u rečenici: 'Iznenadilo me je što verovatnoća nije bila veća.'",
+                pitanje: "3. Aorist pomoćnog glagola (Kondicional)",
                 opcije: [
-                    "Sve je pravilno",
-                    "Greška: verovatnoća → verovatnoća",
-                    "Greška: iznenadilo → iznеnadilo"
+                    "Mi bi to uradili drugačije.",
+                    "Mi bismo to uradili drugačije.",
+                    "Mi bi smo to uradili drugačije."
                 ],
-                tacan: 0
+                tacan: 1
             },
             {
-                pitanje: "6. Pronađi grešku u rečenici: 'To uopšte nije nikakakv problem.'",
+                pitanje: "4. Slaganje broja i glagola (Kongruencija)",
                 opcije: [
-                    "Nema greške",
-                    "Greška: uopšte → u opšte",
-                    "Greška: nikakakv → nikakav"
+                    "Na predavanju su bili dva studenta.",
+                    "Na predavanju je bilo dva studenta.",
+                    "Na predavanju su bila dva studenta."
                 ],
                 tacan: 2
             },
             {
-                pitanje: "7. Kako se pravilno piše?",
+                pitanje: "5. Pravilan oblik pitanja",
                 opcije: [
-                    "ništanevidim",
-                    "ništa ne vidim",
-                    "ništa nevidim"
-                ],
-                tacan: 1
-            },
-            {
-                pitanje: "8. Kako se pravilno piše?",
-                opcije: [
-                    "uprkos tome",
-                    "u prkos tome",
-                    "uprko s tome"
+                    "Da li bi mi dodao so?",
+                    "Dal' bi mi dodao so?",
+                    "Jel bi mi dodao so?"
                 ],
                 tacan: 0
             },
             {
-                pitanje: "9. Kako se pravilno piše?",
+                pitanje: "6. Veznik 'S obzirom na...'",
                 opcije: [
-                    "pošto-poto",
-                    "pošto poto",
-                    "poštopoto"
-                ],
-                tacan: 1
-            },
-            {
-                pitanje: "10. Pravopis – zarez. Izaberi ispravnu rečenicu:",
-                opcije: [
-                    "Ako želiš možemo da se vidimo posle.",
-                    "Ako želiš, možemo da se vidimo posle.",
-                    "Ako, želiš možemo da se vidimo posle."
-                ],
-                tacan: 1
-            },
-            {
-                pitanje: "11. Pravopis – zarez. Izaberi ispravnu rečenicu:",
-                opcije: [
-                    "Kada završim domaći otići ću kući da se odmorim.",
-                    "Kada završim domaći, otići ću kući da se odmorim.",
-                    "Kada, završim domaći otići ću kući da se odmorim."
-                ],
-                tacan: 1
-            },
-            {
-                pitanje: "12. Pravopis – zarez. Izaberi ispravnu rečenicu:",
-                opcije: [
-                    "Znam da si rekao da ćeš doći ali nisam mislio da ćeš kasniti.",
-                    "Znam da si rekao, da ćeš doći, ali nisam mislio da ćeš kasniti.",
-                    "Znam da si rekao da ćeš doći, ali nisam mislio da ćeš kasniti."
+                    "Obzirom da pada kiša, nećemo ići.",
+                    "S obzirom da pada kiša, nećemo ići.",
+                    "S obzirom na to da pada kiša, nećemo ići."
                 ],
                 tacan: 2
             },
             {
-                pitanje: "13. Pravilan oblik – spojeno/odvojeno:",
+                pitanje: "7. Mesto rečce 'se' (Enklitika)",
                 opcije: [
-                    "od prilike",
-                    "otprilike",
-                    "odprilike"
+                    "Dogovorili su se da vide se sutra.",
+                    "Dogovorili su se da se vide sutra.",
+                    "Dogovorili su se da sutra vide se."
                 ],
                 tacan: 1
             },
             {
-                pitanje: "14. Pravilan oblik – spojeno/odvojeno:",
+                pitanje: "8. Prisvojni pridevi vs. Genitiv",
                 opcije: [
-                    "uvek",
-                    "uvjek",
-                    "uviek"
+                    "To je Markov sat.",
+                    "To je sat od Marka.",
+                    "To je sat Marka."
                 ],
                 tacan: 0
             },
             {
-                pitanje: "15. Pravilan oblik – spojeno/odvojeno:",
+                pitanje: "9. Superlativ prideva 'jak'",
                 opcije: [
-                    "ne ću",
-                    "neću",
-                    "ne-ću"
+                    "Najači",
+                    "Najjači",
+                    "Naj jači"
                 ],
                 tacan: 1
             },
             {
-                pitanje: "16. Dopuni pravilno: '_____ si stigao?'",
+                pitanje: "10. Pisanje imena ulica",
                 opcije: [
-                    "od kada",
-                    "otkada",
-                    "od-kada"
+                    "Stanujem u Ulici Kralja Petra.",
+                    "Stanujem u ulici Kralja Petra.",
+                    "Stanujem u Ulici kralja Petra."
+                ],
+                tacan: 2
+            },
+            {
+                pitanje: "11. Negacija uz glagole",
+                opcije: [
+                    "Neznam, ne želim, nemogu.",
+                    "Ne znam, ne želim, ne mogu.",
+                    "Ne znam, neželim, ne mogu."
                 ],
                 tacan: 1
             },
             {
-                pitanje: "17. Dopuni pravilno: '_____ si došao?'",
+                pitanje: "12. Imena reka (dvočlana imena)",
                 opcije: [
-                    "sčim",
-                    "s čim",
-                    "s-čim"
+                    "Južna morava",
+                    "južna Morava",
+                    "Južna Morava"
+                ],
+                tacan: 2
+            },
+            {
+                pitanje: "13. Pisanje složenica sa stranim prefiksom",
+                opcije: [
+                    "Auto-mehaničar",
+                    "Auto mehaničar",
+                    "Automehaničar"
+                ],
+                tacan: 2
+            },
+            {
+                pitanje: "14. Pisanje datuma (redni brojevi)",
+                opcije: [
+                    "15-ti maj",
+                    "15. maj",
+                    "15-og maj"
                 ],
                 tacan: 1
             },
             {
-                pitanje: "18. Dopuni pravilno: 'Čovek _____ je došao.'",
+                pitanje: "15. Odrične zamenice sa predlogom",
                 opcije: [
-                    "koji",
-                    "kojи",
-                    "koјi"
+                    "Nisam se čuo sa nikim.",
+                    "Nisam se čuo ni sa kim.",
+                    "Nisam se čuo sanikim."
+                ],
+                tacan: 1
+            },
+            {
+                pitanje: "16. Glas J (suvišno ili potrebno)",
+                opcije: [
+                    "Kajiš",
+                    "Kaiš",
+                    "Kajš"
+                ],
+                tacan: 1
+            },
+            {
+                pitanje: "17. Prisvojni pridevi na -ski, -ški, -čki",
+                opcije: [
+                    "Srpski jezik",
+                    "Srpski Jezik",
+                    "Srbski jezik"
                 ],
                 tacan: 0
             },
             {
-                pitanje: "19. Teže nedoumice – izaberi ispravno:",
+                pitanje: "18. Pisanje praznika",
                 opcije: [
-                    "popravilu",
-                    "po pravilu",
-                    "po-pravilu"
+                    "Srećna nova Godina!",
+                    "Srećna Nova Godina!",
+                    "Srećna Nova godina!"
+                ],
+                tacan: 2
+            },
+            {
+                pitanje: "19. Instrumental lične zamenice 'ja'",
+                opcije: [
+                    "Ideš li samnom?",
+                    "Ideš li sa mnom?",
+                    "Ideš li s'mnom?"
                 ],
                 tacan: 1
             },
             {
-                pitanje: "20. Teže nedoumice – izaberi ispravno:",
+                pitanje: "20. Pisanje polusloženica (pojmovi koji čuvaju zasebne akcente)",
                 opcije: [
-                    "nipo koju cenu",
-                    "ni po koju cenu",
-                    "ni po koju-cenu"
+                    "Radio aparat",
+                    "Radioaparat",
+                    "Radio-aparat"
                 ],
-                tacan: 1
-            },
-            {
-                pitanje: "21. Teže nedoumice – izaberi ispravno:",
-                opcije: [
-                    "otud'a",
-                    "otuda",
-                    "otud a"
-                ],
-                tacan: 1
+                tacan: 2
             }
         ];
 
@@ -291,10 +282,10 @@
                                 Srpski jezik
                             </h2>
                             <p className="text-lg text-gray-600 mb-8 leading-relaxed">
-                              Milena test pismenosti
+                                Dobrodosli na anastasijin show in this test we are testing nemanja digitalnost
                             </p>
                             <p className="text-md text-gray-500 mb-8">
-                                Johnny
+                                Made by Johhny, Milena, Nina, Necalemilica
                             </p>
                             <button
                                 onClick={pokreniKviz}
@@ -325,7 +316,7 @@
                                 </p>
                             </div>
 
-                            <div className="space-y-4 mb-8">
+                            <div className="space-y-4 mb-8 max-h-96 overflow-y-auto">
                                 <h3 className="text-2xl font-semibold text-gray-800 mb-4">Pregled odgovora:</h3>
                                 {pitanja.map((p, i) => {
                                     const korisnikovOdgovor = odgovori[i];
